# C_Interpreter

./: .gitignore  .replit  .travis.yml  LICENSE  Makefile.am  README.md  bash_runtests.sh  basic_types.h  c_interpreter.html  c_utils.c  c_utils.h  clist.h  configure  configure.ac  cvector.h  generate_page.py  index.html  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  parser.c  parser.h  premake4.lua  preprocessor.c  preprocessor.h  rsw_cstr.c  rsw_cstr.h  run_valgrind_tests.py  runtests.py  runtests.sh  runtests_valgrind.sh  tags  vector_char.c  vector_char.h  vector_token_lex.c  vector_token_lex.h
.github/: FUNDING.yml
src/: .clang-format  c_utils.c  c_utils.h  clist.h  cvector.h  cvector_token_lex.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  parser.c  parser.h  preprocessor.c  preprocessor.h  rsw_cstr.c  tags
tests/: backslash.c  backslash.txt  backslash.txt.expected  backslash2.c  backslash2.txt  backslash2.txt.expected.err  break_continue.c  break_continue.txt  break_continue.txt.expected  declarations.c  declarations.txt  declarations.txt.expected  declarations_simple.txt  dowhile.c  dowhile.txt  dowhile.txt.expected  experimenting.c  for_stmt.c  for_stmt.txt  for_stmt.txt.expected  functions.c  functions.txt  functions.txt.expected  goto_label.c  goto_label.txt  goto_label.txt.expected  ifelse.c  ifelse.txt  ifelse.txt.expected  inc_test1.c  inc_test2.c  include.c.expected  newtest.c  newtest.txt  newtest.txt.expected  newtest_basic.txt  preprocessor.c  preprocessor.txt  preprocessor.txt.expected  problem6.txt  (+78 more)
(+3 files in other folders)
